Twitter authorization link add.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html ng-app="OnlinerNotifier">
+<html ng-app="onlinerNotifier">
 <head>
     <meta name="viewport" content="width=device-width"/>
     @Styles.Render("~/Content/bootstrap")
