--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
@@ -1,3 +1,3 @@
-﻿<a class="btn btn-block btn-social btn-twitter">
+﻿<a ng-href={{twitterLink}} class="btn btn-block btn-social btn-twitter">
     <i class="fa fa-twitter"></i> Sign in with Twitter
 </a>
