Authorization by link add.

--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -1,1 +1,4 @@
-﻿home
+﻿<nav class="navbar navbar-light bg-faded">
+    <b class="navbar-brand">{{name}}</b>
+    <img ng-src={{avatarUri}}>
+</nav>
