--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width"/>
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/font-awesome")
+    @Styles.Render("~/Content/site")
     <title>Index</title>
 </head>
 <body>
