--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -1,4 +1,10 @@
-﻿<nav class="navbar navbar-light bg-faded">
-    <b class="navbar-brand">{{name}}</b>
-    <img ng-src={{avatarUri}}>
+﻿<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/#/account">
+                <img ng-src={{avatarUri}}>
+            </a>
+        </div>
+        <b class="navbar-brand">{{name}}</b>
+    </div>
 </nav>
