--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
@@ -1,3 +1,9 @@
-﻿<a ng-href={{twitterLink}} class="btn btn-block btn-social btn-twitter">
-    <i class="fa fa-twitter"></i> Sign in with Twitter
-</a>
+﻿<div id="signin" class="container">
+    <div class="row">
+        <div class="jumbotron pull-center">
+            <a ng-href={{twitterLink}} class="btn btn-block btn-social btn-twitter">
+                <i class="fa fa-twitter"></i> Sign in with Twitter
+            </a>
+        </div>
+    </div>
+</div>
