--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -8,3 +8,36 @@
         <b class="navbar-brand">{{name}}</b>
     </div>
 </nav>
+
+
+<div class="container body-content">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="text" ng-model="searchQuery">
+        </div>
+        <div class="col-md-1">
+            <button ng-click="search()">Search</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Results</div>
+                <div class="panel-body">
+                    <div class="row" ng-repeat="n in searchResult.products track by $index">
+                        <div class="col-md-6">
+                            <a ng-href={{n.html_url}}>{{n.full_name}}</a>
+                        </div>
+                        <div class="col-md-2">
+                            {{n.prices.min}}
+                        </div>
+                        <div class="col-md-2">
+                            {{n.prices.max}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
