Get started with products getting.

--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -34,6 +34,9 @@
                         <div class="col-md-2">
                             {{n.prices.max}}
                         </div>
+                        <div>
+                            <button ng-click="addProduct(n.id)">Add</button>
+                        </div>
                     </div>
                 </div>
             </div>
