Products removing add.

--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
@@ -35,7 +35,7 @@
                             {{n.MaxPrice}}
                         </div>
                         <div>
-                            <button ng-click="delProduct(n.Id)">Delete</button>
+                            <button ng-click="delProduct(n.Id, $index)">Delete</button>
                         </div>
                     </div>
                 </div>
