--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -35,7 +35,7 @@
                             {{n.prices.max}}
                         </div>
                         <div>
-                            <button ng-click="addProduct(n.id)">Add</button>
+                            <a ng-click="addProduct(n.id)">Add</a>
                         </div>
                     </div>
                 </div>
