--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -12,17 +12,22 @@
 
 <div class="container body-content">
     <div class="row">
-        <div class="col-md-3">
-            <input type="text" ng-model="searchQuery">
-        </div>
-        <div class="col-md-1">
-            <button ng-click="search()">Search</button>
-        </div>
+        <input class="col-md-12 input-lg" type="text" ng-change="search()" ng-model="searchQuery">
     </div>
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Results</div>
+                <div class="panel-heading">
+                    <div class="col-md-6">
+                        <h5>Name</h5>
+                    </div>
+                    <div class="col-md-2">
+                        <h5>Lowest price (BYB)</h5>
+                    </div>
+                    <div class="col-md-2">
+                        <h5>Highest price (BYB)</h5>
+                    </div>
+                </div>
                 <div class="panel-body">
                     <div class="row" ng-repeat="n in searchResult.products track by $index">
                         <div class="col-md-6">
@@ -34,12 +39,19 @@
                         <div class="col-md-2">
                             {{n.prices.max}}
                         </div>
-                        <div>
+                        <div class="col-md-2">
                             <a ng-click="addProduct(n.id)">Add</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-lg-center">
+            <a ng-click="more()">
+                <span>More</span>
+            </a>
         </div>
     </div>
 </div>
