Infinite scroll add. Response after adding product add.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/ng-infinite-scroll")
     @Scripts.Render("~/bundles/app")
 </body>
 </html>
