--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -1,14 +1,4 @@
-﻿<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/#/account">
-                <img ng-src={{avatarUri}}>
-            </a>
-        </div>
-        <b class="navbar-brand">{{name}}</b>
-    </div>
-</nav>
-
+﻿<div ng-include="'app/views/navbar.html'"></div>
 
 <div class="container body-content">
     <div class="row">
