--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
@@ -1,7 +1,7 @@
 ﻿<div id="signin" class="container">
     <div class="row">
-        <div class="jumbotron pull-center">
-            <a ng-href={{twitterLink}} class="btn btn-block btn-social btn-twitter">
+        <div class="col-md-6 col-md-offset-3">
+            <a ng-href={{twitterLink}} class="btn btn-primary btn-block">
                 <i class="fa fa-twitter"></i> Sign in with Twitter
             </a>
         </div>
