--- a/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
@@ -9,3 +9,23 @@ a {
 #signin {
     margin-top: 20px;
 }
+
+.indent {
+    margin-bottom: 10px;
+}
+
+.search {
+    position: relative;
+    font-size: 24px;
+}
+
+.search-input {
+    text-indent: 30px;
+    width: 100%;
+}
+
+.search .fa-search {
+    position: absolute;
+    top: 8px;
+    left: 20px;
+}
