--- a/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
@@ -30,16 +30,26 @@ a {
 }
 
 .product {
-    display: block;
     height: 100px;
     max-height: 100px;
 }
 
+.product a, .product span {
+    display:table-cell; 
+    vertical-align: middle;
+}
+
 .product div{
+    display: table;
+    table-layout: fixed;
     height: 100px;
 }
 
 .product-image {
     max-width: 100px;
     max-height: 100px;
+}
+
+.tracked {
+    background: lightgreen;
 }
