Deleting products on the home page add.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Content/site.css
@@ -39,6 +39,10 @@ a {
     vertical-align: middle;
 }
 
+.product span {
+    text-align: center;
+}
+
 .product div{
     display: table;
     table-layout: fixed;
@@ -52,4 +56,8 @@ a {
 
 .tracked {
     background: lightgreen;
+}
+
+.product-panel h5 {
+    text-align: center;
 }
