--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -21,5 +21,6 @@
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/ng-infinite-scroll")
     @Scripts.Render("~/bundles/app")
+    <script src="~/signalr/hubs"></script>
 </body>
 </html>
