--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width"/>
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/font-awesome")
+    @Styles.Render("~/Content/toastr")
     @Styles.Render("~/Content/site")
     <title>Index</title>
 </head>
@@ -20,6 +21,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/ng-infinite-scroll")
+    @Scripts.Render("~/bundles/toastr")
     @Scripts.Render("~/bundles/app")
     <script src="~/signalr/hubs"></script>
 </body>
