Add searching delay, cleaning table when search string is empty, module for signalR toasts.

--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -5,13 +5,13 @@
         <div class="col-md-12">
             <div class="search">
                 <i class="fa fa-search"></i>
-                <input class="search-input" type="form-control" ng-change="search()" ng-model="searchQuery" placeholder="Enter a product name">
+                <input class="search-input" type="form-control" ng-change="search()" ng-model-options="{ debounce: 300 }" ng-model="searchQuery" placeholder="Enter a product name">
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default product-panel">
+        <div class="col-md-12" ng-switch="products == null">
+            <div class="panel panel-default product-panel" ng-switch-when="false">
                 <div class="panel-heading row">
                     <div class="col-md-2 col-lg-offset-7">
                         <h5>Lowest price</h5>
@@ -47,13 +47,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-lg-center">
-            <a ng-click="more()">
-                <span>More</span>
-            </a>
+            <div ng-switch-when="true">
+                <div class="row">
+                    <div class="col-md-12 text-lg-center">
+                        <span class="table-placeholder">Nothing to show.</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
