--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -23,6 +23,7 @@
     @Scripts.Render("~/bundles/ng-infinite-scroll")
     @Scripts.Render("~/bundles/toastr")
     @Scripts.Render("~/bundles/app")
+    @Scripts.Render("~/bundles/JSMQ")
     <script src="~/signalr/hubs"></script>
 </body>
 </html>
