--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <div class="search">
                 <i class="fa fa-search"></i>
-                <input class="search-input" type="form-control" ng-change="search()" ng-model-options="{ debounce: 300 }" ng-model="searchQuery" placeholder="Enter a product name">
+                <input class="search-input" ng-change="search()" ng-model-options="{ debounce: 300 }" ng-model="searchQuery" placeholder="Enter a product name">
             </div>
         </div>
     </div>
