--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
@@ -1,18 +1,20 @@
 ﻿<div ng-include="'app/views/navbar.html'"></div>
 
 <div class="container body-content">
-    <div class="row jumbotron">
-        <form class="form-inline" name="NotificationForm">
-            <div class="form-group">
-                <label for="time">Time:</label>
-                <input id="time" class="form-control" type="time" ng-model="time" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input id="email" class="form-control" type="email" ng-model="email" required>
-            </div>
-            <button type="submit" class="btn" ng-click="setData()">Set Notification Data</button>
-        </form>
+    <div class="row container indent">
+        <div class="card notification-setting-panel">
+            <form class="form-inline" name="NotificationForm">
+                <div class="form-group">
+                    <label for="time">Time:</label>
+                    <input id="time" class="form-control" type="time" ng-model="time" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input id="email" class="form-control" type="email" ng-model="email" required>
+                </div>
+                <button type="submit" class="btn btn-primary" ng-click="setData()">Set Notification Data</button>
+            </form>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-12">
