--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
@@ -2,8 +2,8 @@
 
 <div class="container body-content">
     <div class="row container indent">
-        <div class="card notification-setting-panel row">
-            <form class="form col-md-4" name="NotificationForm">
+        <div class="card notification-setting-panel">
+            <form class="form-inline" name="NotificationForm">
                 <div class="form-group">
                     <label for="time">Time:</label>
                     <uib-timepicker id="time" class="form-control" ng-model="time" arrowkeys="false" show-spinners="false" show-meridian="false" required></uib-timepicker>
