--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/navbar.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/navbar.html
@@ -1,11 +1,11 @@
 ﻿<nav class="navbar navbar-dark bg-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/home/">OnlinerNotifier</a>
+            <a class="navbar-brand" ng-href="/home">OnlinerNotifier</a>
         </div>
         <ul class="nav navbar-nav pull-right">
             <li class="nav-item">
-                <a class="nav-link" href="/#/account">
+                <a class="nav-link" ng-href="/account">
                     <img ng-src={{avatarUri}}>
                     <b>{{name}}</b>
                 </a>
